--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,6 @@
     color: #2B2D42;
   }
 
-
 /* CUSTOMIZE THE NAVBAR
 -------------------------------------------------- */
 
@@ -204,7 +203,7 @@ label{
 
 /*Trip Page*/
   .tripcontainer {
-    position: fixed;
+    position: absolute;
     width: 80%;
     top: 20%;
     left: 9%;
